Bug 1653690 - do not report failure if a filter tries to move a message to the same folder. r=mkmelin

--HG--
extra : rebase_source : dee245932fa5d4a651d357b524b07cbcd8fde82d