mailnews/local/src/nsParseMailbox.cpp
@@ -1953,8 +1953,8 @@ NS_IMETHODIMP nsParseNewMailState::ApplyFilterHit(nsIMsgFilter* filter,
               }
             }
           } else {
-            MOZ_LOG(FILTERLOGMODULE, LogLevel::Warning,
-                    ("(Local) Target folder is the same as source folder"));
+            MOZ_LOG(FILTERLOGMODULE, LogLevel::Info,
+                    ("(Local) Target folder is the same as source folder, skipping"));
             rv = NS_OK;
           }
           *applyMore = false;
@@ -1997,8 +1997,8 @@ NS_IMETHODIMP nsParseNewMailState::ApplyFilterHit(nsIMsgFilter* filter,
             } else
               m_msgCopiedByFilter = true;
           } else {
-            MOZ_LOG(FILTERLOGMODULE, LogLevel::Warning,
-                    ("(Local) Target folder is the same as source folder"));
+            MOZ_LOG(FILTERLOGMODULE, LogLevel::Info,
+                    ("(Local) Target folder is the same as source folder, skipping"));
             break;
           }
         } break;
